--- a/style.css
+++ b/style.css
@@ -4,3 +4,25 @@ body{
 h1{
     font-size: 50px;
 }
+.orange-color{
+    color: orange;
+}
+section{
+    display: flex;
+}
+.half-width{
+    width: 50%;
+    padding-left: 5%;
+}
+.half-width img{
+    width: 90%;
+}
+.link-button{
+    background-image: linear-gradient(orange, tomato);
+    color: white;
+    font-weight: 700;
+    padding: 10px 40px;
+    border-radius: 5px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
