--- a/style.css
+++ b/style.css
@@ -50,7 +50,9 @@ h2{
     margin-left: 5%;
     margin-right: 5%;
     padding-left: 20px;
-    box-shadow: 10px 10px 40px gray;
+    padding-bottom: 40px;
+    border-radius: 5px;
+    box-shadow: 10px 10px 30px gray;
 }
 #full-stack-development{
     border-left: 7px solid;
@@ -61,4 +63,7 @@ h2{
     border-left: 7px solid;
     border-image: linear-gradient(blue, cyan);
     border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
